# oswald

./: .gitignore  Makefile  config.imp  kilo.cxx  meson.build  run_tests  update_test
include/: cursor.hxx  draw.hxx  keypress.hxx  main.hxx  portion.hxx  row.hxx  terminal.hxx
plugins/snippets/: snippets.c
src/: .row.cxx.swp  command.c  command.h  config.c  config.h  cursor.cxx  draw.cxx  event.c  event.h  highlight.c  highlight.h  keypress.cxx  main.c  main.cxx  main.h  main.hxx  mark.cxx  plugins.h  portion.cxx  row.cxx  terminal.cxx  x.c  x.h  xmalloc.h
src/adt/: .vec.c.swp  adt.h  vec.c  vec.h
src/adt/vec/: vec.c  vec.h
src/buffer/: .buffer.hxx.swp  buffer.h  buffer.hxx  list.c  mark.c  mark.cxx  mark.h  open.c  open.h  portion.cxx
src/draw/: display_string.c  display_string.h  draw.c  draw.cxx  draw.h  draw.hxx  highlight_cursor.c  highlight_cursor.h
src/modules/: highlight_none.cxx  highlight_none.hxx  highlight_regex.cxx  highlight_regex.hxx  highlight_selection.cxx  highlight_treesitter.cxx  highlight_treesitter.hxx
src/plugins/: debug.c  debug.h  misc.c  navigation.c  open.c  snippets.c  treesitter.c  treesitter.h
src/term/: escapes.c  escapes.h  input.c  input.h  mode.c  mode.h
src/terminal/: keypress.cxx  keypress.hxx  terminal.cxx  terminal.hxx
src/vec/: vec.c  vec.h
subprojects/: libimp.wrap  libmeraki.wrap
tests/hello_world/: keystream  output
tests/insert_multiline/: keystream  output
tests/open_file/: file  keystream  output
tests/vertical_scrolling/: file  keystream  output
tree_sitter/: build
